--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/cloudflare.svg" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta http-equiv="refresh" content="5">
+    <!-- <meta http-equiv="refresh" content="5"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Cloudflare R2 Client for Large Uploads</title>
+    <title>Lightweight Cloudflare R2 Client for Large File Uploads</title>
+    <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Vedansh" />
+    <meta name="robots" content="index, follow">
+    <meta name="source" content="https://github.com/offensive-vk/tiny-r2-client" />
   </head>
   <body>
     <div id="root"></div>
