--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/cloudflare.svg" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <meta http-equiv="refresh" content="5"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lightweight Cloudflare R2 Client for Large File Uploads</title>
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Vedansh" />
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, nofollow">
     <meta name="source" content="https://github.com/offensive-vk/tiny-r2-client" />
+    <title>Lightweight Cloudflare R2 Client for Large File Uploads</title>
   </head>
   <body>
     <div id="root"></div>
